--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "latest",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
